--- a/style.css
+++ b/style.css
@@ -2,9 +2,18 @@ body{
     margin:0;
     font-family: Arial,sans-serif;
 }
-
-header{
-    background-color: #333;
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; 
+}
+main {
+    margin-top: 80px; 
+}
+header nav{
+    background-color: white;
     color: white;
     padding: 10px 20px;
     display: flex;
@@ -17,13 +26,36 @@ header nav ul{
     margin: 0;
     padding: 0;
     display: flex;
-    gap:15px;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
 }
 
 header nav ul li a{
-    color:white;
+    color:#333333;
     text-decoration: none;
+    padding: 10px 15px;
+    position: relative;
 }
+
+header nav ul li a::after{
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #333333;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: width 0.3s ease;
+
+}
+
+header nav ul li a:hover:after,
+header nav ul li a:focus:after{
+    width: 100%;
+}
+
 
 .banner{
    position: relative;
@@ -42,5 +74,542 @@ header nav ul li a{
 
 }
 
+.logo{
+    height: 50px;
+    width: auto;
+    display: block;
+    
+}
+
+.icons a{
+    color: #333333;
+    font-size: 1.2rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    padding: 10px;
+}
+.icons a:hover{
+    color: rgb(238, 238, 238);
+}
+
+.menu{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.productos {
+    text-align: center;
+    padding: 20px;
+  }
+  
+  .productos h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .productos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    justify-content: center;
+  }
+  
+  .producto {
+    border: 1px solid #333333;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    background-color: #fff;
+    position: relative;
+  }
+  
+  .producto img {
+    max-width: 100%;
+    border-radius: 10px;
+    transition: transform 0.3s ease; /* Transición suave para el zoom */
+  }
+  
+  .producto:hover img {
+    transform: scale(1.1); /* Aumenta ligeramente el tamaño de la imagen */
+  }
+  .producto h3 {
+    font-size: 18px;
+    margin: 10px 0;
+    position: relative;
+    display: inline-block; /* Asegura que solo el texto sea subrayado */
+  }
+
+  .producto h3::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: #333333;
+    transition: width 0.3s ease; /* Transición suave para el subrayado */
+  }
+  
+  .producto:hover h3::after {
+    width: 100%; /* Subraya todo el texto */
+  }
+  .producto p {
+    margin: 5px 0;
+    color: #666;
+  }
+  
+  .producto .precio {
+    font-weight: bold;
+    color: #333333;
+  }
+  
+  .producto button {
+    border: 1px solid #333333;
+    background-color: transparent;
+    color: #333333;
+    border-radius: 20px;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  
+  .producto button:hover {
+    background-color: #333333;
+    color: white;
+  }
+  
+  .producto .agotado {
+    border: 1px solid #ddd;
+    background-color: #f7f7f7;
+    color: #aaa;
+    cursor: not-allowed;
+  }
+  
+  
+  .etiqueta-agotado {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #f7f7f7;
+    color: #aaa;
+    padding: 5px 10px;
+    font-size: 12px;
+    border-radius: 5px;
+  }
+  
+  .ver-todo {
+    margin-top: 20px;
+    border: 1px solid #333333;
+    background-color: transparent;
+    color: #333333;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .ver-todo:hover {
+    background-color: #333333;
+    color: white;
+  }
+  
+  .jewelry-grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.product-card {
+    position: relative;
+    overflow: hidden;
+    background: #f8f8f8;
+    border-radius: 8px;
+}
+
+.product-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.product-card:hover img {
+    transform: scale(1.05);
+}
+
+.product-link {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    color: #666;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+}
+
+.product-link:after {
+    content: "→";
+    margin-left: 5px;
+}
+
+.rings {
+    grid-row: span 2;
+}
+
+@media (max-width: 768px) {
+    .jewelry-grid {
+        grid-template-columns: 1fr;
+    }
+    .rings {
+        grid-row: span 1;
+    }
+    
+  }
+
+  .footer {
+    background-color: #1C1C1C;
+    padding: 30px 20px;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    text-align: center;
+}
+
+.footer p {
+    margin: 10px 0;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.social-links a {
+    color: #000000;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.social-links a:hover {
+    color: #000000;
+}
+
+.footer-logo img {
+    max-width: 150px;
+    margin: 20px auto;
+    display: block;
+}
+
+.footer-bottom {
+    font-size: 12px;
+    margin-top: 20px;
+    border-top: 1px solid #E5E5E5;
+    padding-top: 10px;
+}
+
+/* Estilos generales para la sección de negocios */
+.main-negocios {
+  background-color: #f1f1f1;
+  padding: 40px 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.main-negocios h1 {
+  text-align: center;
+  color: #333;
+}
+
+.main-negocios p {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #555;
+}
+
+/* Estilos para el formulario */
+.business-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.business-form label {
+  font-size: 14px;
+  color: #333;
+}
+
+.business-form input,
+.business-form textarea {
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.business-form button {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.business-form button:hover {
+  background-color: #555;
+}
+
+/* Estilo General */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+}
+
+/* Header */
+header {
+  text-align: center;
+  position: relative;
+}
+
+.header-image {
+  width: 100%;
+  height: auto;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+header h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+/* Contenedor Principal */
+.container {
+  display: flex;
+  max-width: 1200px;
+  margin: 20px auto;
+  gap: 20px;
+}
+
+/* Filtros */
+.filters {
+  width: 25%;
+  background-color: white;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.filters h3 {
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.filters label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.filters input {
+  margin-right: 10px;
+}
+
+/* Buscador */
+.search-bar {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.search-bar input {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.search-bar button {
+  padding: 10px 15px;
+  font-size: 16px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.search-bar button:hover{
+  transform: scale(1.05);
+}
+
+/* Productos */
+.main-content {
+  flex: 1;
+  background-color: white;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+/* Estilos generales para la sección de productos */
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Tres columnas por fila */
+  gap: 20px; /* Espaciado entre productos */
+  padding: 20px;
+  margin-top: 40px;
+}
+
+.product {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden; /* Para asegurar que las imágenes no se salgan de los bordes */
+  text-align: center;
+  background-color: #fff;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.product:hover {
+  transform: translateY(-10px); /* Levanta el producto un poco al pasar el ratón */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra al hacer hover */
+}
+
+.product img {
+  width: 100%; /* Hace que la imagen ocupe el ancho del contenedor */
+  height: auto; /* Mantiene la relación de aspecto */
+  transition: transform 0.3s ease; /* Transición suave para el zoom */
+  border-bottom: 1px solid #eee;
+}
+
+.product img:hover {
+  transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
+}
+
+.product h4 {
+  font-size: 1.2em;
+  color: #333;
+  margin: 10px 0;
+  transition: color 0.3s ease; /* Transición suave al cambiar color */
+}
+
+.product h4:hover {
+  color: #333; /* Cambia el color al pasar el ratón */
+  text-decoration: underline; /* Subraya el nombre al hacer hover */
+}
+
+.product p {
+  font-size: 1.1em;
+  color: #666;
+  margin: 10px 0;
+}
+
+.product button {
+  padding: 10px 20px;
+  font-size: 1em;
+  color: white;
+  background-color: #333; /* Color dorado */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.product button:hover {
+  background-color: black; /* Cambia a un tono más oscuro al hacer hover */
+  transform: scale(1.05); /* Le da un pequeño efecto de aumento al botón */
+}
+
+@media (max-width: 768px) {
+  .product-grid {
+      grid-template-columns: repeat(2, 1fr); /* Dos columnas en pantallas más pequeñas */
+  }
+}
+
+@media (max-width: 480px) {
+  .product-grid {
+      grid-template-columns: 1fr; /* Una columna en pantallas muy pequeñas */
+  }
+}
 
 
+/* Footer */
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  margin-top: 20px;
+}
+
+/* Estilo para la sección "Sobre Nosotros" */
+.about-us {
+  padding: 40px 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.about-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.about-content h2 {
+  font-size: 2em;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.about-content h3 {
+  font-size: 1.6em;
+  color: #333;
+  margin-top: 30px;
+}
+
+.about-content p {
+  font-size: 1.1em;
+  line-height: 1.6;
+  color: #555;
+  margin-bottom: 15px;
+}
+
+.about-content ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.about-content ul li {
+  margin-bottom: 10px;
+  font-size: 1.1em;
+  color: #555;
+}
+
+.about-content ul li strong {
+  color: #333;
+}
